--- a/meltano/notebook/meltano_jobs.ipynb
+++ b/meltano/notebook/meltano_jobs.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "meltano.core.task_sets.TaskSets"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "ordereddict([('name', 'tap-csv-to-target-postgres'), ('tasks', ['tap-csv target-postgres', 'tap-csv target-snowflake'])])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,53 +81,159 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tap-csv-to-target-postgres'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "job.name"
+    "from meltano.core.schedule_service import ScheduleAlreadyExistsError, ScheduleService"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_dagster_name(string) -> str:\n",
-    "    \"\"\"\n",
-    "    Generate a dagster safe name (^[A-Za-z0-9_]+$.)\n",
-    "    \"\"\"\n",
-    "    return string.replace(\"-\", \"_\").replace(\" \", \"_\")"
+    "schedule_service = ScheduleService(project)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['tap_csv_target_postgres', 'tap_csv_target_snowflake']"
+       "(<meltano.core.schedule.Schedule at 0x7f528b073af0>,\n",
+       " <meltano.core.schedule.Schedule at 0x7f528b073af0>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[generate_dagster_name(task) for task in job.tasks]"
+    "schedule_service.find_schedule('tap-csv-to-target-postgres-schedule'), schedule_service.find_schedule('tap-csv-to-target-postgres-schedule')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tap-csv-to-target-postgres']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[schedule for schedule in schedule_service.schedules() schedule.job == self.name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<meltano.core.schedule.Schedule at 0x7f528b073af0>]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schedule_service."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Something:\n",
+    "\n",
+    "    def __init__(self, name: str, value: int):\n",
+    "        self.name = name\n",
+    "        self.value = value\n",
+    "\n",
+    "    @property\n",
+    "    def some_function(self):\n",
+    "        def print_name(name):\n",
+    "            print(name)\n",
+    "            return 'OK'\n",
+    "        return print_name\n",
+    "    \n",
+    "    @property\n",
+    "    def another_function(self):\n",
+    "\n",
+    "        another_function = self.some_function\n",
+    "        print(another_function)\n",
+    "\n",
+    "        return 'Hello'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Something('hello world1', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.some_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.another_function"
    ]
   }
  ],
